# QR-Code-Detection-OpenCV

./: CMakeLists.txt  fileManager.cpp  fileManager.hpp  main.cpp
Images/Project/: Cerere_optiuni romana_2025-2026.docx  Lab VLAN_initial config (1).pkt  MODEL_optiuni romana (1).docx  RC9.docx  TESTSTTETETSADASDATITITATE (1).txt  canny (1).txt  canny.txt  lab11 (1).pl  lab4.pl  lab6.pl  lab7.html  lab9.pl  lab_activity_1_init cfg.pkt  lab_activity_1_init cfg_v2.pkt  lab_activity_2_init cfg.pkt  node_selector.py  relay_nodes.py  ring_communication.py  run_simulations.py
